SFDM-3964 Вывести в теле ответа метода GET GET /api/cx/v2/product/cj/{id} атрибуты order_tree